# klook

./: CMakeLists.txt  klook.kdev4
locale/it/: CMakeLists.txt
locale/ru/: CMakeLists.txt
src/: audio.cpp  audio.h  declarativeviewer.cpp  declarativeviewer.h  file.cpp  filemodel.h  klookapp.cpp  kpartswidget.cpp  kpartswidget.h  listitemcontent.cpp  main.cpp  mimeprovider.cpp  previewgenerator.cpp  previewprovider.cpp  text.cpp  video.cpp  video.h
